tools/architecture/validate-source-imports/tests/fixtures/invalid/test-support-in-prod/src/index.ts
import { mock } from "@platform/test-support";
export const packageName = "@platform/feature-workflow";
